--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,6 +1,13 @@
-<% include _header %>
-
-<div style="width: 1200px; height: 900px;">
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Nodvel</title>
+    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+</head>
+<body>
+<div class="container" style="position: relative; width: 1200px; height: 980px;"> 
     <% if(pagecontents.background) { %>
         <div style="position: absolute; z-index: 1;">
             <img src="<%= pagecontents.background %>">
@@ -10,81 +17,81 @@
     <% } %>
     <% if(pagecontents.character.length > 0) { %>
         <% if(pagecontents.character.length === 1) { %>
-            <div style="position: absolute; z-index: 2;">
-                    <img src="<%= pagecontents.character[0].path %>">
+            <div id="character" style="position: absolute; z-index: 2;">
+                <img src="<%= pagecontents.character[0].path %>">
             </div>
         <% } %>
         <% if(pagecontents.character.length === 2) { %>
             <div style="position: absolute; z-index: 2;">
-                    <img src="<%= pagecontents.character[0].path %>">
+                <img src="<%= pagecontents.character[0].path %>">
             </div>
             <div style="position: absolute; z-index: 2;">
-                    <img src="<%= pagecontents.character[i].path %>">
+                <img src="<%= pagecontents.character[i].path %>">
             </div>
         <% } %>
         <% if(pagecontents.character.length === 3) { %>
             <div style="position: absolute; z-index: 2;">
-                    <img src="<%= pagecontents.character[0].path %>">
+                <img src="<%= pagecontents.character[0].path %>">
             </div>
             <div style="position: absolute; z-index: 2;">
-                    <img src="<%= pagecontents.character[1].path %>">
+                <img src="<%= pagecontents.character[1].path %>">
             </div>
             <div style="position: absolute; z-index: 2;">
-                    <img src="<%= pagecontents.character[2].path %>">
+                <img src="<%= pagecontents.character[2].path %>">
             </div>
         <% } %>
         <% if(pagecontents.character.length === 4) { %>
             <div style="position: absolute; z-index: 2;">
-                    <img src="<%= pagecontents.character[0].path %>">
+                <img src="<%= pagecontents.character[0].path %>">
             </div>
             <div style="position: absolute; z-index: 2;">
-                    <img src="<%= pagecontents.character[1].path %>">
+                <img src="<%= pagecontents.character[1].path %>">
             </div>
             <div style="position: absolute; z-index: 2;">
-                    <img src="<%= pagecontents.character[2].path %>">
+                <img src="<%= pagecontents.character[2].path %>">
             </div>
             <div style="position: absolute; z-index: 2;">
-                    <img src="<%= pagecontents.character[3].path %>">
+                <img src="<%= pagecontents.character[3].path %>">
             </div>
         <% } %>
     <% } %>
     <% if(pagecontents.choice.length > 0) { %>
         <% if(pagecontents.choice.length === 1) { %>
             <div style="position: absolute; z-index: 4;">
-                    <%= pagecontents.choice[0] %>
+                <%= pagecontents.choice[0] %>
             </div>
         <% } %>
         <% if(pagecontents.choice.length === 2) { %>
             <div style="position: absolute; z-index: 4;">
-                    <%= pagecontents.choice[0] %>
+                <%= pagecontents.choice[0] %>
             </div>
             <div style="position: absolute; z-index: 4;">
-                    <%= pagecontents.choice[1] %>
+                <%= pagecontents.choice[1] %>
             </div>
         <% } %>
         <% if(pagecontents.choice.length === 3) { %>
             <div style="position: absolute; z-index: 4;">
-                    <%= pagecontents.choice[0] %>
+                <%= pagecontents.choice[0] %>
             </div>
             <div style="position: absolute; z-index: 4;">
-                    <%= pagecontents.choice[1] %>
+                <%= pagecontents.choice[1] %>
             </div>
             <div style="position: absolute; z-index: 4;">
-                    <%= pagecontents.choice[2] %>
+                <%= pagecontents.choice[2] %>
             </div>
         <% } %>
         <% if(pagecontents.choice.length === 4) { %>
             <div style="position: absolute; z-index: 4;">
-                    <%= pagecontents.choice[0] %>
+                <%= pagecontents.choice[0] %>
             </div>
             <div style="position: absolute; z-index: 4;">
-                    <%= pagecontents.choice[0] %>
+                <%= pagecontents.choice[0] %>
             </div>
             <div style="position: absolute; z-index: 4;">
-                    <%= pagecontents.choice[2] %>
+                <%= pagecontents.choice[2] %>
             </div>
             <div style="position: absolute; z-index: 4;">
-                    <%= pagecontents.choice[3] %>
+                <%= pagecontents.choice[3] %>
             </div>
         <% } %>
     <% } %>
@@ -94,16 +101,18 @@
         </div>
     <% } %>
 </div>
-<hr>
-<a href="/nodvel/<%= title %>/<%= prevDivergence %>/<%= prevPage %>" style="float: left;">Prev</a>
-<a href="/nodvel/<%= title %>/<%= pagecontents.nextDivergence %>/<%= pagecontents.nextPage %>" style="float: right;">Next</a>
-<hr>
-<form method="post" action="/nodvel/save/<% title %>/<% pagecontents.divergence %>/<% pagecontents.page %>">
-    <select name="save" style="display: none;">
-        <option value="save" selected>save</option>
-    </select>
-    <input type="submit" value="save" style="float: right;" class="btn btn-default">
-</form>
-<a href="/nodvel/<%= contents.title %>" style="float: left;" class="btn btn default">Main page</a>
-
-<% include _footer %>
+<div class="container">
+    <hr>
+    <a href="/nodvel/<%= title %>/<%= prevDivergence %>/<%= prevPage %>" style="float: left;">Prev</a>
+    <a href="/nodvel/<%= title %>/<%= pagecontents.nextDivergence %>/<%= pagecontents.nextPage %>" style="float: right;">Next</a>
+    <hr>
+    <form method="post" action="/nodvel/save/<% title %>/<% pagecontents.divergence %>/<% pagecontents.page %>">
+        <select name="save" style="display: none;">
+            <option value="save" selected>save</option>
+        </select>
+        <input type="submit" value="save" style="float: right;" class="btn btn-default">
+    </form>
+    <a href="/nodvel/<%= contents.title %>" style="float: left;" class="btn btn default">Main page</a>
+</div>
+</body>
+</html>
