--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,93 +5,83 @@
     <title>Nodvel</title>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <style>
+        * {
+                margin: 0px;
+                padding: 0px;
+                border: 0px;
+        }
+        #choice {
+                border: 20px;
+                width: 600px;
+                height: 100px;
+        }
+    </style>
 </head>
 <body>
-<div class="container" style="position: relative; width: 1200px; height: 980px;"> 
+<div style="position: relative; overflow: hidden; width: 100%; height: 100%;"> 
     <% if(pagecontents.background) { %>
-        <div style="position: absolute; z-index: 1;">
-            <img src="<%= pagecontents.background %>">
-        </div>
+        <img src="<%= pagecontents.background %>" style="position: absolute; z-index: 1; top: 0px; left: 0px; width: 1200px; height: 980px;">
     <% } else { %>
-        <div style="position: absolute; z-index: 1; background-color: black;"></div>
+        <div style="position: absolute; z-index: 1; top: 0px; left: 0px; width: 100%; height: 100%; background-color: black;"></div>
     <% } %>
     <% if(pagecontents.character.length > 0) { %>
         <% if(pagecontents.character.length === 1) { %>
-            <div id="character" style="position: absolute; z-index: 2;">
-                <img src="<%= pagecontents.character[0].path %>">
-            </div>
+                <img src="<%= pagecontents.character[0].path %>" style="position: absolute; z-index: 2; left: 450px; top: 220px">
         <% } %>
         <% if(pagecontents.character.length === 2) { %>
-            <div style="position: absolute; z-index: 2;">
-                <img src="<%= pagecontents.character[0].path %>">
-            </div>
-            <div style="position: absolute; z-index: 2;">
-                <img src="<%= pagecontents.character[i].path %>">
-            </div>
+                <img src="<%= pagecontents.character[0].path %>" style="position: absolute; z-index: 2; left: 300px; top: 220px">
+                <img src="<%= pagecontents.character[1].path %>" style="position: absolute; z-index: 2; left: 600px; top: 220px">
         <% } %>
         <% if(pagecontents.character.length === 3) { %>
-            <div style="position: absolute; z-index: 2;">
-                <img src="<%= pagecontents.character[0].path %>">
-            </div>
-            <div style="position: absolute; z-index: 2;">
-                <img src="<%= pagecontents.character[1].path %>">
-            </div>
-            <div style="position: absolute; z-index: 2;">
-                <img src="<%= pagecontents.character[2].path %>">
-            </div>
+                <img src="<%= pagecontents.character[0].path %>" style="position: absolute; z-index: 2; left: 150px; top: 220px">
+                <img src="<%= pagecontents.character[1].path %>" style="position: absolute; z-index: 2; left: 450px; top: 220px">
+                <img src="<%= pagecontents.character[2].path %>" style="position: absolute; z-index: 2; left: 750px; top: 220px">
         <% } %>
         <% if(pagecontents.character.length === 4) { %>
-            <div style="position: absolute; z-index: 2;">
-                <img src="<%= pagecontents.character[0].path %>">
-            </div>
-            <div style="position: absolute; z-index: 2;">
-                <img src="<%= pagecontents.character[1].path %>">
-            </div>
-            <div style="position: absolute; z-index: 2;">
-                <img src="<%= pagecontents.character[2].path %>">
-            </div>
-            <div style="position: absolute; z-index: 2;">
-                <img src="<%= pagecontents.character[3].path %>">
-            </div>
+                <img src="<%= pagecontents.character[0].path %>" style="position: absolute; z-index: 2; left: 450px; top: 0px">
+                <img src="<%= pagecontents.character[1].path %>" style="position: absolute; z-index: 2; left: 450px; top: 300px">
+                <img src="<%= pagecontents.character[2].path %>" style="position: absolute; z-index: 2; left: 450px; top: 600px">
+                <img src="<%= pagecontents.character[3].path %>" style="position: absolute; z-index: 2; left: 450px; top: 900px">
         <% } %>
     <% } %>
     <% if(pagecontents.choice.length > 0) { %>
         <% if(pagecontents.choice.length === 1) { %>
-            <div style="position: absolute; z-index: 4;">
-                <%= pagecontents.choice[0] %>
+            <div id="choice" style="position: absolute; z-index: 4; left: 300px; top: 390px;">
+                <h3><%= pagecontents.choice[0] %></h3>
             </div>
         <% } %>
         <% if(pagecontents.choice.length === 2) { %>
             <div style="position: absolute; z-index: 4;">
-                <%= pagecontents.choice[0] %>
+                <h3><%= pagecontents.choice[0] %></h3>
             </div>
             <div style="position: absolute; z-index: 4;">
-                <%= pagecontents.choice[1] %>
+                <h3><%= pagecontents.choice[1] %></h3>
             </div>
         <% } %>
         <% if(pagecontents.choice.length === 3) { %>
             <div style="position: absolute; z-index: 4;">
-                <%= pagecontents.choice[0] %>
+                <h3><%= pagecontents.choice[0] %></h3>
             </div>
             <div style="position: absolute; z-index: 4;">
-                <%= pagecontents.choice[1] %>
+                <h3><%= pagecontents.choice[1] %></h3>
             </div>
             <div style="position: absolute; z-index: 4;">
-                <%= pagecontents.choice[2] %>
+                <h3><%= pagecontents.choice[2] %></h3>
             </div>
         <% } %>
         <% if(pagecontents.choice.length === 4) { %>
             <div style="position: absolute; z-index: 4;">
-                <%= pagecontents.choice[0] %>
+                <h3><%= pagecontents.choice[0] %></h3>
             </div>
             <div style="position: absolute; z-index: 4;">
-                <%= pagecontents.choice[0] %>
+                <h3><%= pagecontents.choice[1] %></h3>
             </div>
             <div style="position: absolute; z-index: 4;">
-                <%= pagecontents.choice[2] %>
+                <h3><%= pagecontents.choice[2] %></h3>
             </div>
             <div style="position: absolute; z-index: 4;">
-                <%= pagecontents.choice[3] %>
+                <h3><%= pagecontents.choice[3] %></h3>
             </div>
         <% } %>
     <% } %>
