dont mind little change

--- a/views/manual.ejs
+++ b/views/manual.ejs
@@ -14,7 +14,7 @@
 <h2 id="before">Before using</h2>
 <div style="white-space: pre-line;">0. First, i apologize for my poor english.
     1. Signin and Login are needed for all contents.
-    2. We demand only ID and password.</p>
+    2. We demand only ID and password.
     3. As we write in main page, we don't take any responsibility about Copyright.
     4. If you want code in this service, can find at bottom of this page.</div>
 <hr>
