--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -9,12 +9,15 @@
     <input type="submit" class="btn btn-default" style="float: left;">
 </form>
 <br>
+<hr>
 <h3>Uploaded character</h3>
 <ul>
 <% if(contents.characterImgs.length > 0) { %>
     <% contents.characterImgs.forEach(function(item) { %>
         <li><%= item.name %></li>
     <% }) %>
+<% } else { %>
+    <p>There's no image yet.</p>
 <% } %>
 </ul>
 <br>
@@ -28,12 +31,15 @@
     <input type="submit" class="btn btn-default" style="float: left;">
 </form>
 <br>
+<hr>
 <h3>Uploaded background</h3>
 <ul>
 <% if(contents.backgroundImgs.length > 0) { %>
     <% contents.backgroundImgs.forEach(function(item) { %>
         <li><%= item.name %></li>
     <% }) %>
+<% } else { %>
+    <p>There's no image yet.</p>
 <% } %>
 </ul>
 <br>
