--- a/views/searchnodvel.ejs
+++ b/views/searchnodvel.ejs
@@ -1,14 +1,14 @@
 <% include _header %>
 
 <h2>Page list of <%= title %></h2>
-<table style="table-layout: fixed; height: 900px; width: 1100px; overflow: auto;" class="table table-striped">
+<table style="table-layout: auto; height: 900px; width: 1100px; overflow: auto;" class="table table-striped">
     <thead>
         <tr>
             <th style="width: 60px;">Count</th>
             <th style="width: 50px;">Page</th>
             <th style="width: 50px;">Divergence</th>
-            <th style="width: 400px;">Text</th>
-            <th style="width: 400px;">Memo</th>
+            <th style="width: 300px;">Text</th>
+            <th style="width: 300px;">Memo</th>
             <th style="width: 60px;">Link</th>
         </tr>
     </thead>>
@@ -30,7 +30,7 @@
                     <% } %>
                     <% if(item.memo) { %>
                         <td style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"><%= item.memo %></td>
-                    <% else %>
+                    <% } else { %>
                         <td >No memo</td>
                     <% } %>
                     <td><a href="/writenodvel/<%= contents.title %>/<%= item.divergence %>/<%= item.page %>">Go</a></td>
@@ -49,6 +49,7 @@
     <input type="text" class="form-control" placeholder="Search in memo or text" name="searchWord" style="width: 900px; float: left;" required>
     <input type="submit" value="Search" class="btn btn-default" style="float: left;">
 </form>
+<br>
 <br>
 
 <% include _move %>
