--- a/views/rewritenodvel.ejs
+++ b/views/rewritenodvel.ejs
@@ -1,21 +1,14 @@
 <% include _header %>
 
-<h1>Basic information for new Nodvel</h1>
+<h1>Basic information change</h1>
 <hr>
-<p>Writer : <%= writer %></p>
+<p>Writer : <%= contents.writer %></p>
 <form action="/writenodvel/rewrite/<%= contents.title %>" method="post">
 	<h4>Title</h4>
-	<% if(contents.title) { %>
-		<input name="title" type="taxt" class="form-control" value="<%= contents.title %>" required>
-		<br>
-		<h4>Preview of story</h4>
-		<input name="story" type="text" class="form-control" value="<%= contents.story %>" required>
-	<% } else { %>
-		<input name="title" type="taxt" class="form-control" placeholder="Title" required>
-		<br>
-		<h4>Preview of story</h4>
-		<input name="story" type="text" class="form-control" placeholder="Story" required>
-	<% } %>
+	<input name="title" type="taxt" class="form-control" value="<%= contents.title %>" required>
+	<br>
+	<h4>Preview of story</h4>
+	<input name="story" type="text" class="form-control" value="<%= contents.story %>" required>
 	<br>
 	<h4>Select main genre</h4>
 	<select name="genre" class="selectpicker" style="width: 400px; height: 40px; line-height: 40px;" required>
@@ -28,8 +21,8 @@
 		<option value="general">General</option>
 	</select>
 	<br>
-    <input type="submit" value="Next" class="btn btn-default pull-right">
-	<a href="/" class="btn btn-default pull-left">Cancel</a>
+    <input type="submit" value="Next" class="btn btn-primary pull-right">
+	<a href="/nodvel/<%= contents.title %>" class="btn btn-info pull-left">Cancel</a>
 </form>
 
 <% include _footer %>
