--- a/views/writenodvel.ejs
+++ b/views/writenodvel.ejs
@@ -12,13 +12,13 @@
 	<br>
 	<h4>Select main genre</h4>
 	<select name="genre" class="selectpicker" style="width: 400px; height: 40px; line-height: 40px;" required>
-		<option value="romance">Romance</option>
-		<option value="horror">Horror</option>
-		<option value="sf">SF</option>
-		<option value="fantasy">Fantasy</option>
-		<option value="historical">Historical</option>
-		<option value="thriller">Thriller</option>
-		<option value="general">General</option>
+		<option value="Romance">Romance</option>
+		<option value="Horror">Horror</option>
+		<option value="SF">SF</option>
+		<option value="Fantasy">Fantasy</option>
+		<option value="Historical">Historical</option>
+		<option value="Thriller">Thriller</option>
+		<option value="General">General</option>
 	</select>
 	<br>
     <input type="submit" value="Next" class="btn btn-default pull-right">
