--- a/views/topten.ejs
+++ b/views/topten.ejs
@@ -2,7 +2,7 @@
 
 <h2>Most liked Nodvel</h2>
 <br>
-<h3>Top ten Nodvel that most liked from people.</h3>
+<h3>Top ten liked</h3>
 <hr>
 <br>
 <% if(genre) { %>
