--- a/views/searchnodvel.ejs
+++ b/views/searchnodvel.ejs
@@ -33,7 +33,11 @@
                     <% } else { %>
                         <td >No memo</td>
                     <% } %>
-                    <td><a href="/writenodvel/<%= contents.title %>/<%= item.divergence %>/<%= item.page %>">Go</a></td>
+                    <% if(contents.ended) { %>
+                        <td><a href="/nodvel/<%= contents.title %>/<%= item.divergence %>/<%= item.page %>">Go</a></td>
+                    <% } else { %>
+                        <td><a href="/writenodvel/<%= contents.title %>/<%= item.divergence %>/<%= item.page %>">Go</a></td>
+                    <% } %>
                 </tr>
             <% }) %>
         <% } else { %>
@@ -47,7 +51,7 @@
 <hr>
 <form action="/writenodvel/search/<%= contents.title %>" method="post">
     <input type="text" class="form-control" placeholder="Search in memo or text" name="searchWord" style="width: 900px; float: left;" required>
-    <input type="submit" value="Search" class="btn btn-default" style="float: left;">
+    <input type="submit" value="Search" class="btn btn-primary" style="float: left;">
 </form>
 <br>
 <br>
