--- a/views/search.ejs
+++ b/views/search.ejs
@@ -47,7 +47,7 @@
 <hr>
 <form action="/search" method="post">
     <input type="text" class="form-control" placeholder="Search" name="search" style="width: 900px; float: left;" required>
-    <input type="submit" value="Search" class="btn btn-default" style="float: left;">
+    <input type="submit" value="Search" class="btn btn-primary" style="float: left;">
 </form>
 <br>
 
